--- a/src/App.css
+++ b/src/App.css
@@ -37,34 +37,71 @@
   }
 }
 
-header {
+header{
   padding: 1rem;
-  box-shadow: 10px 0 21px #898989;
+  box-shadow: 10px 10px 10px lime;
+  border-bottom-left-radius:10px ;
   border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items:baseline;
 }
 
-.button-btn {
-  background-color: lime;
-  padding: .5rem 1rem;
-  border: 0;
-  border-radius: 5px;
-  font-weight: 900;
+.todo-btn{
+background-color: #61dafb;
+padding: .5rem 1rem;
+border: 0;
+border-radius: 5px;
+font-weight: 900;
+}
+
+.main-content, .container{
+  margin: 1rem auto;
+  width: 100%;
+  max-width: 900px;
 }
 
 .main-content {
-  max-width: 900px;
-  width: 100%;
-  margin: 1rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
-.main-content article {
+.container form{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.container form label {
+  font-weight: 900;
+}
+
+input, textarea {
+  border: 1px solid gold;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+
+input {
   max-width: 300px;
   width: 100%;
-  padding: 1rem;
-  box-shadow: 10px 0 21px lightgray;
-  border-radius: 20px;
+}
+
+textarea {
+  height: 30vh;
+}
+
+form .todo-btn {
+  max-width: 100px;
+  width: 100%;
+}
+
+.main-content article{
+background-color: lime;
+max-width: 300px;
+width: 100%;
+box-shadow: 10px 10px 10px yellowgreen;
+border-radius: 20px;
+word-break: break-all;
 }
